discussion/kv_engine/155140/155140_rev15_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-46729: Remove implicit creation of the ExecutorPool

Make sure it is explicitly created before it is used. This is
mostly a "test issue" as the memcached core explicitly create
the pool before starting to accept clients (and shut it down
as part of shutdown)

Change-Id: I36786a844de7dea359bf0cb5ecba77b086e96f52

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2021-06-11 08:09:29.000000000
Message: 
Uploaded patch set 15.
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2021-06-11 08:10:11.000000000
Message: 
Patch Set 15: Code-Review+2
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-11 09:16:57.000000000
Message: 
Patch Set 15: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9761/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/benchmarks/engine_fixture.h:15:10: error: "benchmark/benchmark.h" file not found [clang-diagnostic-error]
#include <benchmark/benchmark.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9761/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/benchmarks/engine_fixture.h:15:10:
error: "benchmark/benchmark.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9761/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19343/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8356/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36724/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/281/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31391/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10409/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11762/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11336/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11484/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-11 09:40:34.000000000
Message: 
Patch Set 15:

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9761/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/benchmarks/engine_fixture.h:15:10: error: "benchmark/benchmark.h" file not found [clang-diagnostic-error]
#include <benchmark/benchmark.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9761/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/benchmarks/engine_fixture.h:15:10:
error: "benchmark/benchmark.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9761/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8356/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36724/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/281/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31391/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10409/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11762/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11336/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11484/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19353/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2021-06-11 09:51:04.000000000
Message: 
Patch Set 15: Verified+1

Override failing clang-tidy - the patch does not add the failing include file
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2021-06-11 09:51:07.000000000
Message: 
Removed Verified-1 by Build Bot <build@couchbase.com>

----------------------------------------------------------------------------------------------------------------------
